Implement TokenStore for secure token management and add associated tests
- Introduced TokenStore class to manage publish tokens securely, storing only SHA-256 hashes in a JSON file.
- Implemented methods for adding, validating, and removing tokens, ensuring plaintext tokens are not persisted.
- Added tests for TokenStore to validate token management functionality, including token addition, validation, and removal.
- Created MarketConsole and MarketSetup tests to ensure proper functionality of the market server setup and publishing process.
- Developed MarketPublish.py script for uploading package databases to the market over HTTP, requiring a publish token.
- Enhanced test coverage for MarketConsole and MarketSetup to validate command-line arguments and interactive prompts.